--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Hanuman:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
+.bg-nav{
+    background-color: #f0ffeb;
+}
