--- a/assets/chhorng/style.css
+++ b/assets/chhorng/style.css
@@ -3,7 +3,8 @@
     margin: 0;
     padding: 0;
 }
-body {
+
+register-page {
     background-image: url(../chhorng/img/pexel-leaf.jpg);
     background-position: center;
     background-repeat: no-repeat;
@@ -29,16 +30,18 @@ body {
     box-shadow: 0 0 8px rgba(74, 144, 226, 0.6);
     transition: 0.3s ease;
 }
+
 .login-area .bg-black {
     /* background-color: rgbr(0, 0, 0, 0.15)!important; */
-    background-color: rgba(0, 0, 0, 0.885)!important ;
+    background-color: rgba(0, 0, 0, 0.885) !important;
 }
+
 /* dok padding col-6 oy vea jit knea vnh   */
 /* .login-area .row{
     --bs-gutter-x: 0rem!important;
 } */
 .login-area .bg-dark {
-    background-color: rgba(0, 0, 0, 0.55)!important;
+    background-color: rgba(0, 0, 0, 0.55) !important;
 }
 
 
@@ -49,9 +52,72 @@ body {
     height: 35px;
     padding: 6px;
 }
+
 .signin-area .icon:hover {
     background-color: rgba(0, 0, 255, 0.475);
 }
+
 .signin-area .bg-light {
-    background-color: #ffffffb1!important;
+    background-color: #ffffffb1 !important;
+}
+
+/* aboutpage  */
+
+.about-area .card-member {
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px rgb(0, 0, 0, 0.2);
+    position: relative;
+    overflow: hidden;
+}
+
+.about-area .card-member .card-title {
+    width: 100%;
+    height: 70px;
+    background-color: rgba(0, 0, 0, 0.478);
+    color: white;
+    padding: 14px 5px;
+    text-align: center;
+    position: absolute;
+    bottom: -32px;
+    backdrop-filter: blur(5px);
+    transition: 0.7s;
+    left: 0;
+}
+
+.about-area .card-member:hover .card-title {
+    bottom: -8px;
+}
+
+.about-area .card-member .btn-group {
+    width: 60px;
+    height: 70%;
+    background-color: rgba(0, 0, 0, 0.482);
+    position: absolute;
+    top: 0px;
+    right: -60px;
+    border-radius: 5px 0px 0px 5px;
+    display: flex;
+    flex-wrap: wrap;
+    backdrop-filter: blur(5px);
+    transition: 1s;
+}
+
+.about-area .img-icon {
+    width: 30px;
+    height: 30px;
+
+}
+
+.about-area .nav-link {
+    text-decoration: none;
+    color: white;
+    display: block;
+    margin-top: 20px;
+    text-align: center;
+    /* font-size: 20px; */
+    padding-left: 16px;
+}
+
+.about-area .card-member:hover .btn-group {
+    right: 0px;
 }
