--- a/assets/makara/style.css
+++ b/assets/makara/style.css
@@ -17,17 +17,52 @@
   box-shadow: 0 8px 20px rgba(32, 32, 32, 0.2);
 }
 
+.btn-addcart{
+  transition: all 0.3s ease;
+}
 .btn-addcart:hover{
   background-color: #fff;
   border: 2px solid green;
   color: #000;
   color: green;
 }
-/* Apply animation when Bootstrap shows toast */
+/* style an9mation h1  */
+.typing-loop {
+    display: inline-block;
+    overflow: hidden;
+    white-space: nowrap;
+    width: 0;
+    animation:
+      typingLoop 6s steps(40, end) infinite,
+      blink .75s step-end infinite;
+  }
+  @keyframes typingLoop {
+    0% {
+      width: 0
+    }
+    40% {
+      width: 100%
+    }
+    60% {
+      width: 100%
+    }
+    100% {
+      width: 0
+    }
+
+  }
+
+  @keyframes blink {
+    50% {
+      border-color: transparent
+    }
+  }
+/* end */
+
+/* animation shows toast */
 .animate-toast.showing {
   animation: slideInRight 0.6s forwards;
 }
-/* Apply animation when Bootstrap hides toast */
 .animate-toast.hide {
   animation: slideOutRight 0.6s forwards;
 }
@@ -52,5 +87,5 @@
     opacity: 0;
   }
 }
-
+/* end  */
 
