--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,14 @@ body {
   background-color: #f0ffeb;
 }
 
+.navbar-brand img {
+  transition: transform 0.3s ease;
+}
+
+.navbar-brand img:hover {
+  transform: scale(1.05);
+}
+
 .banner-img {
   width: 100%;
 }
@@ -25,6 +33,10 @@ body {
   display: none !important;
 }
 
+.badge{
+  top: 10% !important;
+}
+
 .dropdown-menu-center {
   left: 50% !important;
   transform: translateX(-80%) !important;
@@ -32,8 +44,59 @@ body {
 
 .limit-line-2 {
   display: -webkit-box;
-  -webkit-line-clamp: 2;   /* limit to 2 lines */
+  -webkit-line-clamp: 2; /* limit to 2 lines */
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+.hero-banner {
+  margin-top: 70px; /* offset fixed navbar */
+  width: 100%;
+  height: 70vh;
+  overflow: hidden;
+}
+
+.banner-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
+/* ============ RESPONSIVE FIXES ============ */
+      @media (max-width: 576px) {
+        .search-2{
+          display: none;
+        }
+        .logo{
+          width:40px !important;
+        }
+        .landing-nav{
+          display: none;
+        }
+        .landing-btn{
+          font-size: 12px;
+        }
+      }
+
+      @media (max-width: 768px ) {
+        .search-2{
+          display: none;
+        }
+        .logo{
+          width:40px !important;
+        }
+      }
+
+      @media (min-width: 1200px) {
+        .search-1{
+          display: none;
+        }
+        .hero-banner {
+          height: 40vh;
+        }
+        .logo{
+          width:45px !important;
+        }
+      }
