--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,3 +93,22 @@ body {
     width: 45px !important;
   }
 }
+
+/* animation */
+
+#text-animation {
+  font-size: 50px;
+  font-weight: bold;
+  background-image: linear-gradient(-225deg, #198754);
+  background-size: 200% auto; /* important for animation */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 2s linear infinite;
+}
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
+}
+
