--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,9 +56,19 @@ body {
   background-color: #f0ffeb;
 }
 
-.banner-1{
-  top:-30%;
-  left:0;
+.banner-img .banner-1{
+  top:-32.5%;
+  left:5%;
+}
+
+.banner-img .banner-2{
+  bottom:-32.5%;
+  left:-13.5%;
+}
+
+.banner-img .banner-3{
+  bottom:-32.5%;
+  right:-24.5%;
 }
 
 /* ============ RESPONSIVE FIXES ============ */
