--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,19 +54,20 @@ body {
   background-color: #f0ffeb;
 }
 
-.banner-img .banner-1 {
-  top: -32.5%;
-  left: 5%;
+.banner{
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.banner-img .banner-2 {
-  bottom: -32.5%;
-  left: -13.5%;
+.bg-banner-img{
+  width: 100%;
+  height: 70vh;
 }
 
-.banner-img .banner-3 {
-  bottom: -32.5%;
-  right: -24.5%;
+.banner-img{
+  animation: smooth-bounce 3s infinite cubic-bezier(0.25, 0.1, 0.25, 1);
 }
 
 .section-random{
@@ -96,21 +97,41 @@ body {
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   .search-2 {
     display: none;
   }
   .logo {
     width: 40px !important;
   }
+.bg-banner-img{
+  width: 100%;
+  height: 50vh;
+}
+.banner{
+  position: absolute;
+  top: 30%;
+  left: 55%;
+  transform: translate(-50%, -50%);
+}
 }
 
-@media (min-width: 768.5px) {
+@media (min-width: 1024.5px) {
   .search-1 {
     display: none;
   }
   .logo {
     width: 45px !important;
+  }
+}
+
+/* bounce */
+@keyframes smooth-bounce {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-5px); /* move up */
   }
 }
 
