--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,7 @@ body {
 
 .banner-img {
   width: 100%;
+  animation: smooth-bounce 3s infinite cubic-bezier(0.25, 0.1, 0.25, 1);
 }
 
 .nav-hover:hover {
@@ -54,23 +55,19 @@ body {
   background-color: #f0ffeb;
 }
 
-.banner{
+.banner {
   position: absolute;
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
-.bg-banner-img{
+.bg-banner-img {
   width: 100%;
   height: 70vh;
 }
 
-.banner-img{
-  animation: smooth-bounce 3s infinite cubic-bezier(0.25, 0.1, 0.25, 1);
-}
-
-.section-random{
+/* .section-random{
   height: 100%;
   background-image: url(../image/enviroment.jpg);
   background-repeat: no-repeat;
@@ -79,10 +76,10 @@ body {
 
 .test{
   height: 100vh;
-}
+} */
 
 /* ============ RESPONSIVE FIXES ============ */
-@media (max-width: 576px) {
+@media (min-width: 0) and (max-width: 575.98px) {
   .search-2 {
     display: none;
   }
@@ -95,39 +92,67 @@ body {
   .landing-btn {
     font-size: 12px;
   }
+
+  .text-fs, .btn-fs{
+    font-size: 17px;
+  }
+  .bg-banner-img {
+    width: 100%;
+    height: 40vh;
+  }
+  .banner {
+    position: absolute;
+    top: 30%;
+    left: 54%;
+    transform: translate(-50%, -50%);
+  }
 }
 
-@media (max-width: 1024px) {
+@media (min-width: 576px) and (max-width: 991.98px) {
   .search-2 {
     display: none;
   }
   .logo {
     width: 40px !important;
   }
-.bg-banner-img{
-  width: 100%;
-  height: 50vh;
-}
-.banner{
-  position: absolute;
-  top: 30%;
-  left: 55%;
-  transform: translate(-50%, -50%);
-}
+  .text-fs, .btn-fs{
+    font-size: 17px;
+  }
+  .bg-banner-img {
+    width: 100%;
+    height: 40vh;
+  }
+  .banner {
+    position: absolute;
+    top: 30%;
+    left: 55%;
+    transform: translate(-50%, -50%);
+  }
 }
 
-@media (min-width: 1024.5px) {
+@media (min-width: 992px) and (max-width: 1500px) {
   .search-1 {
     display: none;
   }
   .logo {
     width: 45px !important;
   }
+  .bg-banner-img {
+    width: 100%;
+    height: 70vh;
+  }
+  .banner {
+    position: absolute;
+    top: 45%;
+    left: 55%;
+    transform: translate(-50%, -50%);
+  }
 }
 
 /* bounce */
 @keyframes smooth-bounce {
-  0%, 100% {
+  0%,
+  100% {
     transform: translateY(0);
   }
   50% {
@@ -258,4 +283,3 @@ body {
   -webkit-animation-iteration-count: 1;
   animation-iteration-count: 1;
 }
-
