--- a/assets/makara/style.css
+++ b/assets/makara/style.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Hanuman:wght@100..900&family=Kantumruy+Pro:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Hanuman:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 .fs-kp {
-  font-family: 'Kantumruy Pro', sans-serif;
+  font-family: "Hanuman", serif !important;
   font-optical-sizing: auto;
 }
 .fs-rb {
