--- a/assets/Kropum/donate.css
+++ b/assets/Kropum/donate.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Hanuman:wght@100..900&family=Kantumruy+Pro:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+
 * {
   padding: 0;
   margin: 0;
@@ -103,21 +105,19 @@ body {
   font-weight: bold;
   color: black; /* Make inside transparent */
 }
-    .card-overlay-icon {
-      background: #fff;
-      padding: 12px;
-      border-radius: 50%;
-      font-size: 18px;
-      color: green;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-    }
-    
-    .limit-lines {
-  display: -webkit-box;        /* Required for flexbox line clamp */
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 2;      /* Limit to 3 lines */
-  overflow: hidden;            /* Hide overflow text */
-  text-overflow: ellipsis;     /* Show "..." at the end */
+.card-overlay-icon {
+  background: #fff;
+  padding: 12px;
+  border-radius: 50%;
+  font-size: 18px;
+  color: green;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
 
-  
+.limit-lines {
+  display: -webkit-box; /* Required for flexbox line clamp */
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2; /* Limit to 3 lines */
+  overflow: hidden; /* Hide overflow text */
+  text-overflow: ellipsis; /* Show "..." at the end */
+}
