--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,16 @@ body {
   cursor: pointer;
 }
 
+.register-btn{
+  transition: 0.3s;
+}
+
+.register-btn:hover{
+  background-color: #198754;
+  color: #fff;
+  transition: 0.3s;
+}
+
 .limit-line-2 {
   display: -webkit-box;
   -webkit-line-clamp: 2; /* limit to 2 lines */
