--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -310,8 +310,11 @@ body {
 
 .slider{
   width: 100%;
-  height: 150px;
+  height: 250px;
   overflow: hidden;
+  -webkit-box-shadow: 0px 0px 38px -13px rgba(0, 0, 0, 1);
+-moz-box-shadow: 0px 0px 38px -13px rgba(0, 0, 0, 1);
+box-shadow: 0px 0px 38px -13px rgba(0, 0, 0, 1);
 }
 
 .slider .list{
@@ -326,7 +329,7 @@ body {
   height: 50px;
   position: absolute;
   left: 100%;
-  top: 25px;
+  top:70px;
   animation: autoRun 10s linear infinite;
   animation-delay: calc((10s / 6)* (var(--position) - 1));
 }
