--- a/assets/minea/css/minea.css
+++ b/assets/minea/css/minea.css
@@ -1,8 +1,14 @@
-*{
+@import url("https://fonts.googleapis.com/css2?family=Hanuman:wght@100..900&family=Kantumruy+Pro:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+
+body {
+  font-family: "Hanuman", Roboto;
+}
+
+/* *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-}
+} */
 
 .card-img{
     width: 300px;
