--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,10 @@ body {
   transform: scale(1.05);
 }
 
+.search-2{
+  width: 215px;
+}
+
 .banner-img {
   width: 100%;
   animation: smooth-bounce 3s infinite cubic-bezier(0.25, 0.1, 0.25, 1);
@@ -129,6 +133,29 @@ body {
   left: -6px;
   top: 6px;
 }
+
+/* Default inactive tab */
+.custom-tabs .btn {
+  color: var(--bs-success);
+  background-color: transparent;
+  border-color: var(--bs-success);
+  transition: all 0.3s;
+}
+
+/* Hover effect for inactive tabs */
+.custom-tabs .btn:not(.active):hover {
+  color: white;
+  background-color: var(--bs-success);
+}
+
+/* Active tab */
+.custom-tabs .btn.active {
+  color: white !important;
+  background-color: var(--bs-success) !important;
+  border-color: var(--bs-success);
+}
+
+
 
 /* Overlay */
 .overlay-1 {
